# smart-clicker

./: .gitignore  pyproject.toml
smart_clicker/: label_data.json  main.py  manual_check.py  video_catpure.py
smart_clicker/train_data/: label_data.json
smart_clicker/useful_script/: for_predict.py  image_classification_efficientnet_fine_tuning.py  image_classification_from_scratch.py  introduction_to_svm.py  make_label_for_frame.py  make_pic_group_by_label.py  make_train_and_val_data.py  make_video_to_pic.py  move_to_cleaned_frame.py  train_keras.py  train_myself_svm.py
