[tool.poetry]
name = "smart-clicker"
version = "0.1.0"
description = ""
authors = ["liuyuzhao <liuyuzhao@xyz10.com>"]
readme = "README.md"
packages = [{include = "smart_clicker"}]

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
mss = "^9.0.1"
loguru = "^0.7.2"
scikit-learn = "^1.5.1"
tensorflow = "^2.16.2"
matplotlib = "^3.9.1"
pydot = "^2.0.0"
pydot-ng = "^2.0.0"
tensorflow-datasets = "^4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
