[tool.poetry]
name = "smart-clicker"
version = "0.1.0"
description = ""
authors = ["liuyuzhao <liuyuzhao@xyz10.com>"]
readme = "README.md"
packages = [{include = "smart_clicker"}]

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
mss = "^9.0.1"
loguru = "^0.7.2"
scikit-image = "^0.24.0"
pyautogui = "^0.9.54"


[tool.poetry.group.dev.dependencies]
deptry = "^0.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
